# emulate-8080

./: .gitignore  Cargo.toml  README.md
src/: intel8080.rs  machine.rs  main.rs
