[package]
name = "emulate-8080"
version = "0.1.0"
authors = ["Herohtar <belac1186@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
printops = []
cputest = []

[dependencies]
piston_window = "^0.120.0"
image = "^0.23.14"
rodio = { version = "^0.14.0", default-features = false, features = ["flac"] }
zip = "^0.5.13"
